--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "eslint": "^8.0.0",
     "eslint-config-next": "15.5.0",
     "postcss": "^8.4.32",
+    "supabase": "2.45.5",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.0.0"
   }
