--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -22,6 +22,8 @@
     "@fullcalendar/interaction": "^6.1.0",
     "@fullcalendar/react": "^6.1.0",
     "@fullcalendar/timegrid": "^6.1.0",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@stripe/stripe-js": "^7.9.0",
     "@supabase/supabase-js": "^2.39.0",
     "cheerio": "^1.1.2",
@@ -42,6 +44,7 @@
     "serpapi": "^2.2.1",
     "stripe": "^18.5.0",
     "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "wavesurfer.js": "^7.7.0",
     "zustand": "^5.0.8"
   },
