--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -24,6 +24,7 @@
     "@fullcalendar/timegrid": "^6.1.0",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toast": "^1.2.15",
     "@stripe/stripe-js": "^7.9.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.39.0",
