--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
 {
-  "version": 2,
-  "buildCommand": "yarn install --frozen-lockfile && yarn workspace @contractor-platform/web build",
+  "buildCommand": "yarn workspace @contractor-platform/web build",
   "installCommand": "yarn install --frozen-lockfile",
-  "framework": null,
-  "outputDirectory": "packages/web/.next"
+  "framework": "nextjs",
+  "rootDirectory": "packages/web"
 }
