verce ai sdk set up

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -15,6 +15,7 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@ai-sdk/perplexity": "^2.0.12",
     "@contractor-platform/types": "workspace:*",
     "@contractor-platform/utils": "workspace:*",
     "@fullcalendar/core": "^6.1.19",
@@ -22,12 +23,14 @@
     "@fullcalendar/interaction": "^6.1.0",
     "@fullcalendar/react": "^6.1.0",
     "@fullcalendar/timegrid": "^6.1.0",
+    "@openrouter/ai-sdk-provider": "^1.2.0",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.15",
     "@stripe/stripe-js": "^7.9.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.39.0",
+    "ai": "^5.0.65",
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
