--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -30,6 +30,7 @@
     "@stripe/stripe-js": "^7.9.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.39.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "ai": "^5.0.65",
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.0",
@@ -44,7 +45,10 @@
     "react-dom": "^18.3.1",
     "react-draggable": "^4.5.0",
     "react-grid-layout": "^1.5.2",
+    "react-markdown": "^10.1.0",
     "react-pdf": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.6",
+    "remark-gfm": "^4.0.1",
     "replicate": "^1.1.0",
     "serpapi": "^2.2.1",
     "stripe": "^18.5.0",
