Fixd vercel errror

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
   "buildCommand": "yarn workspace @contractor-platform/web build",
   "installCommand": "yarn install --frozen-lockfile",
-  "outputDirectory": "packages/web/.next",
-  "rootDirectory": "packages/web"
+  "outputDirectory": "packages/web/.next"
 }
