--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -10,6 +10,7 @@
     "type-check": "tsc --noEmit",
     "clean": "rm -rf .next out",
     "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:pull": "drizzle-kit pull",
     "db:studio": "drizzle-kit studio"
@@ -23,20 +24,32 @@
     "@fullcalendar/interaction": "^6.1.0",
     "@fullcalendar/react": "^6.1.0",
     "@fullcalendar/timegrid": "^6.1.0",
+    "@langchain/core": "^0.3.78",
+    "@langchain/textsplitters": "^0.1.0",
     "@openrouter/ai-sdk-provider": "^1.2.0",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.15",
     "@stripe/stripe-js": "^7.9.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.39.0",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@xenova/transformers": "2.5.2",
     "ai": "^5.0.65",
+    "assemblyai": "^4.16.1",
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
+    "framer-motion": "^12.23.24",
+    "google-libphonenumber": "^3.2.43",
     "lucide-react": "^0.344.0",
     "next": "^15.5.4",
     "pdfjs-dist": "^4.0.0",
@@ -45,6 +58,7 @@
     "react-dom": "^18.3.1",
     "react-draggable": "^4.5.0",
     "react-grid-layout": "^1.5.2",
+    "react-international-phone": "^4.6.0",
     "react-markdown": "^10.1.0",
     "react-pdf": "^10.1.0",
     "react-syntax-highlighter": "^15.6.6",
@@ -64,7 +78,7 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "autoprefixer": "^10.4.16",
-    "drizzle-kit": "^0.31.4",
+    "drizzle-kit": "^0.31.5",
     "eslint": "^8.0.0",
     "eslint-config-next": "15.5.0",
     "postcss": "^8.4.32",
