--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,9 @@ ASSEMBLYAI_API_KEY=your_assemblyai_key
 PERPLEXITY_API_KEY=your_perplexity_key
 OPENWEATHER_API_KEY=your_openweather_key
 
+# DocuSeal Integration
+DOCUSEAL_API_KEY=your_docuseal_api_key_here
+
 # Google Custom Search for Images (Contractor Search Engine)
 GOOGLE_SEARCH_API_KEY=your_google_search_api_key_here
 GOOGLE_CSE_ID=23de2758e19a541ef
