--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -18,6 +18,7 @@
     "@ai-sdk/perplexity": "^2.0.12",
     "@contractor-platform/types": "workspace:*",
     "@contractor-platform/utils": "workspace:*",
+    "@docuseal/react": "^1.0.68",
     "@fullcalendar/core": "^6.1.19",
     "@fullcalendar/daygrid": "^6.1.0",
     "@fullcalendar/interaction": "^6.1.0",
@@ -30,6 +31,7 @@
     "@stripe/stripe-js": "^7.9.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.39.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/react-syntax-highlighter": "^15.5.13",
     "ai": "^5.0.65",
     "cheerio": "^1.1.2",
@@ -37,6 +39,7 @@
     "clsx": "^2.1.0",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
     "next": "^15.5.4",
     "pdfjs-dist": "^4.0.0",
