--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@ai-sdk/perplexity": "^2.0.12",
+    "@aws-sdk/client-scheduler": "^3.910.0",
     "@contractor-platform/types": "workspace:*",
     "@contractor-platform/utils": "workspace:*",
     "@fullcalendar/core": "^6.1.19",
@@ -46,6 +47,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "framer-motion": "^12.23.24",
@@ -68,6 +70,7 @@
     "stripe": "^18.5.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "twilio": "^5.10.3",
     "wavesurfer.js": "^7.7.0",
     "zod": "^4.1.11",
     "zustand": "^5.0.8"
